TAG: annotload-tr10044-5
TAG: annotload-tr10044-4
DATE: 02/16/2010
STAFF: lec
CHANGES:
1) annotload.py
   moved variable 'properties'
   from line 1039 to line 1031

TAG: annotload-tr10044-3
DATE: 02/11/2010
STAFF: sc
CHANGES:
1) annotload.py  - max columns 80 so easy to read
   ANNOTPROPERTY optional

TAG: annotload-tr10044-2
TAG: annotload-tr10044-1
DATE: 12/02/2010
STAFF: lec
CHANGES: removed goa.config, goa.py/these have been moved to goaload

TAG: annotload-tr10044-BP
DATE: 12/01/2010
STAFF: lec
CHANGES: branch point tag - TR10044/go notes

TAG: annotload-4-4-0-5
TAG: annotload-4-4-0-4
DATE: 10/12/2010
STAFF: lec
CHANGES: TR10393/added 'UniProtKB'/VOC_deleteGOGAFRed

TAG: annotload-4-4-0-3
DATE: 08/24/2010
STAFF: sc
CHANGES: annotload.py - added History for tr6839 changes

TAG: annotload-4-4-0-2
DATE: 08/18/2010
STAFF: sc
CHANGES: merge issue, new call to createEvidenceRecord
and that method had changed its signature after branch created

TAG: annotload-4-4-0-1
DATE: 08/18/2010
STAFF: sc
CHANGES: Merge tr6839 branch to trunk

TAG: annotload-4-3-4-2
TAG: annotload-4-3-4-1
DATE: 06/09/2010
STAFF: lec
CHANGES: add call to VOC_deleteGOGAFRed

TAG: annotload-tr6839-4
DATE: 07/23/2010
STAFF: sc
CHANGES:
1) annotload.py - removed unused ecodes dictionary
2) updated some commenting

TAG: annotload-tr6839-3
DATE: 07/22/2010
STAFF: sc
CHANGES:
1) config.default - added explanation of variables to this
  example config
2)
 
TAG: annotload-tr6839-2
DATE: 07/21/2010
STAFF: sc
CHANGES:
1) annotload.csh - takes optional 'mcv' 
   parameter
2) annotload.py - added processMcvFile() added
   optional 'mcv' parameter

TAG: annotload-tr6839-1
DATE: 07/05/2010
STAFF: sc
CHANGES:
1) annotload.csh - check that ANNOTINPUTFILE exists
2) annotload.py - if columns > 10 get col 10 aka ldb

TAG: annotload-tr6839-BP
DATE: 04/29/2010
STAFF: sc
CHANGES: Branch point tag for marker types

TAG: annotload-4-3-3-2
DATE: 04/13/2010
STAFF: lec
CHANGES:
a) TR9777/config.default
