@@ -27,6 +27,7 @@
 # Input:
 #
 #    A tab-delimited file in the format:
+#
 #       field 1: Accession ID of Vocabulary Term being Annotated to
 #       field 2: ID of MGI Object being Annotated (ex. MGI ID)
 #       field 3: J: (J:#####)
@@ -36,26 +37,35 @@
 #       field 7: Editor (max length 30)
 #       field 8: Date (MM/DD/YYYY)
 #       field 9: Notes (max length 255)
+#
 #       field 10: Logical DB Name of Object (field 2),
 #               being Annotated (default is MGI); optional
 #               field 10 is not required and should ONLY be used if
 #               you need to specify a logoical DB key OTHER THAN "1" (MGI).
 #               For example, see "entrezgeneload/human/annotations.py".
+#
 #       field 11: Properties
-#           &=& : separates property from its value prop1&=&val1
-#           &==& : separates one property/value pair from another
+#           &=&   : separates property from its value 
+#               prop1&=&val1
+#
+#           &==&  : separates one property/value pair from another
 #               prop1&=&val1&==&prop2&=&val2
-#           &===& : separates a stanza; a stanza contain >= 1
-#               property/value pair
+#
+#           &===& : separates a stanza; stanza contain >= 1 property/value pair
 #               prop1&=&val1&==&prop2&=&val2&===&prop1&=&val1&==&prop2&=&val2
+#
 #       field 11 GO examples:
+#
 #       one stanza, one property/value pair:
 #           gene product&=&UniProtKB:P12023
+#
 #       one stanza, two property/value pair:
 #           gene product&=&UniProtKB:P12023&==&external ref&=&PMID:2834384|EXP
+#
 #       two stanza, two property/value pair:
 #           gene product&=&UniProtKB:P12023&==&external ref&=&PMID:2834384|EXP \
 #       &===&gene product&=&UniProtKB:P12023&==&external ref&=&PMID:2834384|EXP
+#
 #	field 12+ may be used by curators and this load should ignore
 #
 # Parameters:
@@ -134,6 +144,11 @@
 #               If it does not exist, create a new Evidence record.
 #
 # History:
+#
+# lec	02/16/2011
+#	- moved "properties = ''" up so that the variable is always set
+#	  even if it is not used
+#	- added some blank lines for read-ability
 #
 # sc	02/11/2011
 #	- ANNOTPROPERTY optional
@@ -849,7 +864,9 @@ def createEvidenceRecord(newAnnotKey, evidenceKey, referenceKey, \
 	    allProps = string.split(s, '&==&')
 
 	    for p in allProps:
+
 		pTerm, pValue = string.split(p,'&=&')
+
 		if pTermDict.has_key(pTerm):
 		    propertyFile.write('%s\t%s\t%s\t%s\t%s\t%s\t%s\t%s\t%s\t%s\n' \
 		    % (propertyKey, evidencePrimaryKey, pTermDict[pTerm], \
