@@ -1,3 +1,4 @@
+TAG: annotload-tr10044-6
 TAG: annotload-tr10044-5
 TAG: annotload-tr10044-4
 DATE: 02/16/2010
@@ -6,6 +7,7 @@ CHANGES:
 1) annotload.py
    moved variable 'properties'
    from line 1039 to line 1031
+2) added some blank lines for more read-abilty
 
 TAG: annotload-tr10044-3
 DATE: 02/11/2010
